fixed display bug where text was wrapping awkwardly

--- a/public/stylesheets/fymp.css
+++ b/public/stylesheets/fymp.css
@@ -76,6 +76,7 @@ label.checkbox_label {
 }
 .row_value {
   float: left;
+  width:330px;
 }
 
 .padded_subheading {
